src/test/ui/impl-trait/impl-fn-hrtb-bounds-2.stderr
error: lifetime may not live long enough
  --> $DIR/impl-fn-hrtb-bounds-2.rs:4:9
   |
LL |     |x| x
   |      -- ^ returning this value requires that `'1` must outlive `'2`
   |      ||
   |      |return type of closure is &'2 u8
   |      has type `&'1 u8`

error: aborting due to previous error

